[gd_scene load_steps=9 format=3 uid="uid://c0v3m48f2fqrr"]

[ext_resource type="Script" path="res://levels/level_2/interactive_level_1.gd" id="1_6etxf"]
[ext_resource type="Texture2D" uid="uid://bx77akss5biwg" path="res://assets/ui/ulli_art/cidade.png" id="2_af1r0"]
[ext_resource type="Texture2D" uid="uid://c3v0lwnpg5fh1" path="res://assets/ui/logos/logo-sus.png" id="3_pr2qo"]
[ext_resource type="PackedScene" uid="uid://bbue2npeku8yi" path="res://InteractibleUtils/InteractibleObject/InteractibleWord/interactible_word.tscn" id="4_d27ja"]
[ext_resource type="PackedScene" uid="uid://b6tg1l8pm2s2s" path="res://dialogue/dialogue_scene.tscn" id="5_ytr66"]

[sub_resource type="Animation" id="Animation_lfr7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WordAtractor/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-217, -59)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WordAtractor/ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1n20u"]
resource_name = "susse"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WordAtractor/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-217, -59), Vector2(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WordAtractor/ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v12l6"]
_data = {
"RESET": SubResource("Animation_lfr7v"),
"susse": SubResource("Animation_1n20u")
}

[node name="InteractiveLevel1" type="Node2D"]
script = ExtResource("1_6etxf")

[node name="Cidade" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.338824, 0.281739)
texture = ExtResource("2_af1r0")
metadata/_edit_lock_ = true

[node name="WordAtractor" type="Marker2D" parent="."]
position = Vector2(664, 296)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="WordAtractor"]
offset_left = -217.0
offset_top = -59.0
offset_right = 216.0
offset_bottom = 68.0
color = Color(0.980392, 0.988235, 1, 0.713726)

[node name="Logo-sus" type="Sprite2D" parent="WordAtractor"]
position = Vector2(4, 4)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_pr2qo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v12l6")
}

[node name="InteractibleButtons" type="Node2D" parent="."]

[node name="SaudePublicaUniversal" parent="InteractibleButtons" instance=ExtResource("4_d27ja")]
position = Vector2(704, 72)
texture_path = "res://assets/Levels/Level2/const1.jpg"
texture_size = Vector2(220, 60)
dialogue_json = "res://levels/interactive_levels/level_1/json/saude_publica.json"

[node name="SaudeGratuita" parent="InteractibleButtons" instance=ExtResource("4_d27ja")]
position = Vector2(344, 160)
texture_path = "res://assets/Levels/Level2/const2.jpg"
texture_size = Vector2(220, 60)
dialogue_json = "res://levels/interactive_levels/level_1/json/saude_gratuita.json"

[node name="SaudeDireitoTodos" parent="InteractibleButtons" instance=ExtResource("4_d27ja")]
position = Vector2(1056, 440)
texture_path = "res://assets/Levels/Level2/const3.jpg"
texture_size = Vector2(220, 60)
dialogue_json = "res://levels/interactive_levels/level_1/json/saude_direito_todos.json"

[node name="DeveresDoEstado" parent="InteractibleButtons" instance=ExtResource("4_d27ja")]
position = Vector2(320, 472)
texture_size = Vector2(220, 60)
dialogue_json = "res://levels/interactive_levels/level_1/json/deveres_do_estado.json"

[node name="DialogueScene" parent="." instance=ExtResource("5_ytr66")]
visible = false

[connection signal="clicado" from="InteractibleButtons/SaudePublicaUniversal" to="." method="_on_interactible_word_clicado"]
[connection signal="clicado" from="InteractibleButtons/SaudeGratuita" to="." method="_on_interactible_word_clicado"]
[connection signal="clicado" from="InteractibleButtons/SaudeDireitoTodos" to="." method="_on_interactible_word_clicado"]
[connection signal="clicado" from="InteractibleButtons/DeveresDoEstado" to="." method="_on_interactible_word_clicado"]
[connection signal="next_button_pressed" from="DialogueScene" to="." method="_on_dialogue_scene_next_button_pressed"]
